// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue-clip can mount "destroyed" VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload SharpUpload--empty">
		<div class="SharpUpload__inner">
			<div class="SharpUpload__content">
				<form class="dropzone">
					<button type="button" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<!---->
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
`;

exports[`vue-clip can mount "in progress" VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="SharpUpload__inner dz-clickable">
			<div class="SharpUpload__content">
				<form class="dropzone" style="display: none;">
					<button type="button" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<div class="SharpUpload__container">
					<!---->
					<div class="SharpUpload__infos">
						<div class="mb-3 text-truncate">
							<label class="SharpUpload__filename">Fichier.pdf</label>
							<div class="SharpUpload__info mt-2">
								<span class="mr-2">14.65 KB</span>
								<!---->
							</div>
							<div class="SharpUpload__progress mt-2">
								<div role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 50%;"></div>
							</div>
						</div>
						<div>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary" style="display: none;">
								{{ form.upload.edit_button }}
							</button>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary SharpButton--danger SharpUpload__remove-button">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
					<button type="button" class="SharpUpload__close-button">
						<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpUpload__close-icon">
							<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
						</svg>
					</button>
				</div>
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload SharpUpload--empty">
		<div class="SharpUpload__inner dz-clickable">
			<div class="SharpUpload__content">
				<form class="dropzone">
					<button type="button" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<!---->
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount initially image VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="SharpUpload__inner dz-clickable">
			<div class="SharpUpload__content">
				<form class="dropzone" style="display: none;">
					<button type="button" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<div class="SharpUpload__container row">
					<div class="SharpUpload__thumbnail col-4 col-md-4">
						<img src="/image.jpg">
					</div>
					<div class="SharpUpload__infos col-8 col-md-8">
						<div class="mb-3 text-truncate">
							<label class="SharpUpload__filename">Image.jpg</label>
							<div class="SharpUpload__info mt-2">
								<span class="mr-2">14.65 KB</span>
								<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Image.jpg" download="Image.jpg" class="SharpUpload__download-link">
									<i class="fas fa-download"></i>
									{{ form.upload.download_link }}
								</a>
							</div>
							<div class="SharpUpload__progress mt-2" style="display: none;">
								<div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 0%;"></div>
							</div>
						</div>
						<div>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary">
								{{ form.upload.edit_button }}
							</button>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary SharpButton--danger SharpUpload__remove-button">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
					<button type="button" class="SharpUpload__close-button">
						<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpUpload__close-icon">
							<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
						</svg>
					</button>
				</div>
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<div id="mocked___BV_modal_outer_" style="position: absolute; z-index: 1040;">
			<div id="mocked" role="dialog" aria-hidden="true" aria-labelledby="mocked___BV_modal_title_" aria-describedby="mocked___BV_modal_body_" class="modal fade SharpModal" style="display: none;">
				<div class="modal-dialog modal-md">
					<!---->
					<div role="document" id="mocked___BV_modal_content_" tabindex="-1" class="modal-content">
						<header id="mocked___BV_modal_header_" class="modal-header">
							<div>
								<h5 class="SharpModal__heading">{{ modals.cropper.title }}</h5>
								<button type="button" class="SharpModal__close">
									<svg width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpModal__close-icon">
										<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
									</svg>
								</button>
							</div>
						</header>
						<div id="mocked___BV_modal_body_" class="modal-body">
							<!---->
							<div>
								<button class="SharpButton SharpButton--primary">
									<i class="fas fa-undo"></i>
								</button>
								<button class="SharpButton SharpButton--primary">
									<i class="fas fa-redo"></i>
								</button>
							</div>
						</div>
						<footer id="mocked___BV_modal_footer_" class="modal-footer">
							<button class="btn btn-secondary">
								{{ modals.cancel_button }}
							</button>
							<button class="btn btn-primary position-relative">
								<span class="">
									{{ modals.ok_button }}
								</span>
								<!---->
							</button>
						</footer>
					</div>
					<!---->
				</div>
			</div>
			<!---->
		</div>
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount initially non image VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="SharpUpload__inner dz-clickable">
			<div class="SharpUpload__content">
				<form class="dropzone" style="display: none;">
					<button type="button" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<div class="SharpUpload__container">
					<!---->
					<div class="SharpUpload__infos">
						<div class="mb-3 text-truncate">
							<label class="SharpUpload__filename">Fichier.pdf</label>
							<div class="SharpUpload__info mt-2">
								<span class="mr-2">14.65 KB</span>
								<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Fichier.pdf" download="Fichier.pdf" class="SharpUpload__download-link">
									<i class="fas fa-download"></i>
									{{ form.upload.download_link }}
								</a>
							</div>
							<div class="SharpUpload__progress mt-2" style="display: none;">
								<div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 0%;"></div>
							</div>
						</div>
						<div>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary" style="display: none;">
								{{ form.upload.edit_button }}
							</button>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary SharpButton--danger SharpUpload__remove-button">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
					<button type="button" class="SharpUpload__close-button">
						<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpUpload__close-icon">
							<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
						</svg>
					</button>
				</div>
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount non croppable image 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="SharpUpload__inner dz-clickable">
			<div class="SharpUpload__content">
				<form class="dropzone" style="display: none;">
					<button type="button" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<div class="SharpUpload__container row">
					<div class="SharpUpload__thumbnail col-4 col-md-4">
						<img src="/image.jpg">
					</div>
					<div class="SharpUpload__infos col-8 col-md-8">
						<div class="mb-3 text-truncate">
							<label class="SharpUpload__filename">Image.jpg</label>
							<div class="SharpUpload__info mt-2">
								<span class="mr-2">14.65 KB</span>
								<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Image.jpg" download="Image.jpg" class="SharpUpload__download-link">
									<i class="fas fa-download"></i>
									{{ form.upload.download_link }}
								</a>
							</div>
							<div class="SharpUpload__progress mt-2" style="display: none;">
								<div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 0%;"></div>
							</div>
						</div>
						<div>
							<button type="button" disabled="disabled" class="SharpButton SharpButton--sm SharpButton--secondary">
								{{ form.upload.edit_button }}
							</button>
							<button type="button" class="SharpButton SharpButton--sm SharpButton--secondary SharpButton--danger SharpUpload__remove-button">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
					<button type="button" class="SharpUpload__close-button">
						<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpUpload__close-icon">
							<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
						</svg>
					</button>
				</div>
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount read-only VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload SharpUpload--empty SharpUpload--disabled">
		<div class="SharpUpload__inner dz-clickable">
			<div class="SharpUpload__content">
				<form class="dropzone">
					<button type="button" disabled="disabled" class="dz-message SharpButton SharpButton--ghost SharpUpload__upload-button">
						{{ form.upload.browse_button }}
					</button>
				</form>
				<!---->
				<div class="clip-preview-template" style="display: none;">
					<div></div>
				</div>
			</div>
		</div>
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;
